# HDSoC_analysis_stages

./: CMakeLists.txt  README.md
cmake/: Config.cmake.in
include/: LinkDef.h
include/analysis_pipeline/hdsoc/stages/: channel_integral_histogram_stage.h  nalu_waveforms_integrator_stage.h
include/data_products/: channel_integral.h  channel_integral_collection.h
include/stages/: channel_integral_histogram_stage.h  nalu_waveforms_integrator_stage.h
src/analysis_pipeline/hdsoc/data_products/: channel_integral.cpp
src/analysis_pipeline/hdsoc/stages/: channel_integral_histogram_stage.cpp  nalu_waveforms_integrator_stage.cpp
src/data_products/: channel_integral.cpp  channel_integral_collection.cpp
src/stages/: channel_integral_histogram_stage.cpp  nalu_waveforms_integrator_stage.cpp
